# nmos6502

./: .gitignore  README  build.py
include/nmos6502/: common.hpp  cpu.hpp  disassemble.hpp  instructions.hpp  memory.hpp
scripts/: CMakeLists.txt
src/: main.cpp
src/nmos6502/: cpu.cpp  disassemble.cpp  instructions.cpp  memory.cpp
